# ClawKnow

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CN.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/archive/: SKILL.md
.claude/skills/archive/scripts/: archive_to_kb.py
.claude/skills/ask-kb/: SKILL.md
.claude/skills/ask-kb/references/: response_style.md
.claude/skills/ask-kb/scripts/: build_index.py  search_kb.py
.claude/skills/discuss-paper/: SKILL.md
.claude/skills/discuss-paper/scripts/: discuss_paper.py
.claude/skills/graph-review/: SKILL.md
.claude/skills/ingest-paper/: SKILL.md
.claude/skills/ingest-paper/scripts/: ingest_paper.py
.claude/skills/ingest-url/: SKILL.md
.claude/skills/ingest-url/scripts/: ingest_url.py
.claude/skills/interview/: SKILL.md
.claude/skills/interview/references/: record_schema.md
.claude/skills/interview/scripts/: manage_interview.py
.claude/skills/link-paper-to-kb/: SKILL.md
.claude/skills/link-paper-to-kb/scripts/: link_paper.py
.claude/skills/plan-wiki/: SKILL.md
.claude/skills/plan-wiki/references/: tree_schema.md
.claude/skills/plan-wiki/scripts/: plan_structure.py
.claude/skills/sync-wiki/: SKILL.md
.claude/skills/sync-wiki/scripts/: sync_to_feishu.py
docs/: demo_llm_notes.md
lib/: config.py  feishu.py  retrieval.py  workspace.py
tools/: export_graph.py  migrate_legacy.py  review_graph.py  seed_demo.py
workspaces/default/: kb.yaml
workspaces/demo/: kb.yaml
workspaces/llm-knowledge/: kb.yaml
