[project]
name = "clawknow"
version = "0.3.0"
description = "ClawKnow — Claude-native multi-workspace Feishu knowledge base manager"
requires-python = ">=3.10"
dependencies = [
    "lark-oapi>=1.4.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]
